--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,6 @@
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <%- include('./navbar.ejs') %>
-    
-    <%- include('./footer') %>
+    <%- include('./home') %>
 </body>
 </html>
